[media-service] Updated MediaController and contracts